Rebranding and iOS build fixes